
2011-02-22  Carsten Haitzler (The Rasterman)

        * Fix ecore-file inotify fd would be duplicated in children
        on fork. Have it detecti this on next monitor add and re-init the
        inotify fd and fd handler.

2011-02-24 Vincent Torri

	* Ecore_File fix compilation when ecore_con and curl are not
	available

2011-02-27 Jihoon Kim

        * Add ecore_imf_context_preedit_string_with_attributes_get API.

2011-03-01 Raoul Hecky

	* Add ecore_con_url_ssl_verify_peer_set API.

2011-03-01 Guillaume Friloux

	* Fix detection of complete file write in ecore_file inotify.

2011-03-16 Cedric Bail

	* Add ecore_thread_reschedule.

2011-03-19 Mike Blumenkrantz

        * Fix crash in ecore_con_ssl related to attempted connections on a dead socket

2011-03-23  Carsten Haitzler (The Rasterman)

        * Fix ecore-evas interceptor didn't handle override-redirect
        windows correctly, expecting a feed-back event from x, which it didn't
        get.

2011-03-23  Elixirious

	* Fix ecore_con_url_ftp_upload upload the file until the end.

2011-03-29  PnB

	* Add ecore_con_url_ssl_ca_set to manually set a certificate authority.

2011-03-30  Carsten Haitzler (The Rasterman)

        * Ecore_X gains some more x sync counter controls and Ecore_Evas
        now uses the netwm sync protocol to get wm's to only configure
        as fast as it can keep drawing.

2011-04-05  Leif Middelschulte

       * Add ecore_x_randr_edid_* data extraction and validation functions
       for EDID structures.

2011-04-01  Cedric Bail

	* Add ecore_con_url_pipeline_set and ecore_con_url_pipeline_get for
	HTTP 1.1 pipelining support.

2011-04-05  Cedric Bail

	* Remove Ecore_Evas Cocoa backend that use depreacted Evas Quartz
	backend.

2011-04-11  Hannes Janetzek

	* Fix removal of windows from ignore_list with ecore_x_window_ignore_set

2011-04-13  Doyun Kang

	* Ecore_X + Ecore_Evas: Add more support for shape input setting